--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; </span>
+          <span class="copyright"></span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
